<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <item android:id="@+id/main_menu_filter"
            android:icon="@drawable/ic_filter"
            android:title="@string/filter"
            app:showAsAction="always"
            app:iconTint="@color/colorWhite">
            <menu android:id="@+id/sousmenu">

...
